...
  onPressSignup,
  email,
  password,
  passwordValidation,
  isLoading
}) => (
  <KeyboardAvoidingView testID="signup-form" style={styles.container} behavior="padding" keyboardVerticalOffset={80} enabled>
    <ScrollView style={styles.form} contentContainerStyle={styles.formContent} keyboardShouldPersistTaps={'handled'}>

      <TextInput
        placeholder="E-mail address"
        autoCapitalize="none"
        value={email}
...
